node_firmware/build/log/idf_py_stdout_output_3932
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D "D:\nipun prev laptop\final_year\idf_files\node_firmware\build\bootloader\esp-idf\esptool_py" && D:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe D:/Espressif/frameworks/esp-idf-v5.0.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 "D:/nipun prev laptop/final_year/idf_files/node_firmware/build/bootloader/bootloader.bin""
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[2/9] Building C object esp-idf/wifi_station/CMakeFiles/__idf_wifi_station.dir/wifi_station.c.obj
FAILED: esp-idf/wifi_station/CMakeFiles/__idf_wifi_station.dir/wifi_station.c.obj 
ccache D:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -I"D:/nipun prev laptop/final_year/idf_files/node_firmware/build/config" -I"D:/nipun prev laptop/final_year/idf_files/node_firmware/components/wifi_station/include" -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/newlib/platform_include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/. -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/private_include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/heap/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/log/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/. -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/platform_port/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include/esp32 -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/esp32 -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_common/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/soc -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/include/private -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps/sntp -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/lwip/src/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include/arch -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/deprecated -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_pm/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_ringbuf/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_timer/include -I"D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/include" -I"D:/nipun prev laptop/final_year/idf_files/node_firmware/components/actuator/include" -I"D:/nipun prev laptop/final_year/idf_files/node_firmware/components/mqtt/include" -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/mqtt/esp-mqtt/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_netif/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_event/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/nvs_flash/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_partition/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_wifi/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_phy/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_phy/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/espmqtt/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/tcp_transport/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp-tls -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp-tls/esp-tls-crypto -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/mbedtls/port/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/mbedtls/mbedtls/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/mbedtls/mbedtls/library -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/mbedtls/esp_crt_bundle/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og "-fmacro-prefix-map=D:/nipun prev laptop/final_year/idf_files/node_firmware=." -fmacro-prefix-map=D:/Espressif/frameworks/esp-idf-v5.0.1=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/wifi_station/CMakeFiles/__idf_wifi_station.dir/wifi_station.c.obj -MF esp-idf\wifi_station\CMakeFiles\__idf_wifi_station.dir\wifi_station.c.obj.d -o esp-idf/wifi_station/CMakeFiles/__idf_wifi_station.dir/wifi_station.c.obj -c "D:/nipun prev laptop/final_year/idf_files/node_firmware/components/wifi_station/wifi_station.c"
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/wifi_station/wifi_station.c:42:1: error: expected ',' or ';' before 'static'
   42 | static EventGroupHandle_t s_wifi_event_group;
      | ^~~~~~
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/wifi_station/wifi_station.c: In function 'event_handler':
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/wifi_station/wifi_station.c:66:32: error: 's_wifi_event_group' undeclared (first use in this function)
   66 |             xEventGroupSetBits(s_wifi_event_group, WIFI_FAIL_BIT);
      |                                ^~~~~~~~~~~~~~~~~~
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/wifi_station/wifi_station.c:66:32: note: each undeclared identifier is reported only once for each function it appears in
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/wifi_station/wifi_station.c: In function 'wifi_init_sta':
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/wifi_station/wifi_station.c:79:5: error: 's_wifi_event_group' undeclared (first use in this function)
   79 |     s_wifi_event_group = xEventGroupCreate();
      |     ^~~~~~~~~~~~~~~~~~
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
ninja: build stopped: subcommand failed.
